# aws-lambda-python-runtime-interface-client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.build  Dockerfile.rie  MANIFEST.in  Makefile  README.md  RELEASE.CHANGELOG.md  THIRD-PARTY-LICENSES  pyproject.toml  setup.py  tox.ini
.github/workflows/: PULL_REQUEST_TEMPLATE.md  release-on-version-change.yml  test-on-push-and-pr.yml
awslambdaric/: __init__.py  __main__.py  bootstrap.py  interfaces.py  lambda_config.py  lambda_context.py  lambda_elevator_utils.py  lambda_literals.py  lambda_multi_concurrent_utils.py  lambda_runtime_client.py  lambda_runtime_exception.py  lambda_runtime_feature_handler.py  lambda_runtime_features.py  lambda_runtime_hooks_runner.py  lambda_runtime_log_utils.py  lambda_runtime_marshaller.py  lambda_unhandled_exception_warning_message.py  runtime_client.cpp
requirements/: base.txt  dev.txt
scripts/: build-container.sh  dev.py  patch_libcurl_config.sh  preinstall.sh  test-rie.sh  update_deps.sh
test/: test_bootstrap.py  test_lambda_context.py  test_lambda_runtime_client.py  test_lambda_runtime_marshaller.py
test/integration/codebuild/: buildspec.os.alpine.1.yml  buildspec.os.alpine.2.yml  buildspec.os.alpine.3.yml  buildspec.os.amazonlinux.yml  buildspec.os.centos.1.yml  buildspec.os.centos.2.yml  buildspec.os.debian.yml  buildspec.os.ubuntu.1.yml  buildspec.os.ubuntu.2.yml
test/integration/codebuild-local/: Dockerfile.agent  test_one.sh
test/integration/docker/: Dockerfile.echo.alpine  Dockerfile.echo.amazonlinux  Dockerfile.echo.centos  Dockerfile.echo.ubuntu
tests/: test_bootstrap.py  test_concurrency.py  test_elevator_runner.py  test_lambda_config.py  test_lambda_context.py  test_lambda_runtime_client.py  test_lambda_runtime_features.py  test_lambda_runtime_log_utils.py  test_lambda_runtime_marshaller.py  test_main.py  test_multi_concurrent_runner.py  test_runtime_hooks.py
tests/integration/: docker-compose.template.yml  run-local.sh
tests/integration/codebuild/: buildspec.os.alpine.1.yml  buildspec.os.alpine.2.yml  buildspec.os.alpine.3.yml  buildspec.os.alpine.yml  buildspec.os.amazonlinux.1.yml  buildspec.os.amazonlinux.2.yml  buildspec.os.amazonlinux.2023.yml  buildspec.os.amazonlinux.23.yml  buildspec.os.amazonlinux.yml  buildspec.os.centos.1.yml  buildspec.os.centos.2.yml  buildspec.os.centos.yml  buildspec.os.debian.yml  buildspec.os.ubuntu.1.yml  buildspec.os.ubuntu.2.yml  buildspec.os.ubuntu.yml
tests/integration/codebuild-local/: Dockerfile.agent  codebuild_build.sh  test_all.sh  test_one.sh
tests/integration/docker/: Dockerfile.echo.alpine  Dockerfile.echo.amazonlinux  Dockerfile.echo.amazonlinux2  Dockerfile.echo.amazonlinux2023  Dockerfile.echo.centos  Dockerfile.echo.debian  Dockerfile.echo.ubuntu
tests/integration/test-handlers/echo/: app.py
tests/test_built_in_module_name/: sys.py
tests/test_handler_with_slash/: test_handler.py
