[tool.poetry]
name = "awslambdaric"
version = "3.0.2"
description = "AWS Lambda Runtime Interface Client for Python"
authors = ["Amazon Web Services"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "awslambdaric" }]

[tool.poetry.dependencies]
python = ">=3.9"
simplejson = ">=3.20.1"
snapshot-restore-py = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=4.4.0"
pytest = ">=3.0.7"
mock = ">=2.0.0"
parameterized = ">=0.9.0"
ruff = "^0.1.0"
poethepoet = "^0.24.0"
pyrefly = "^0.26.0"

[tool.poe.tasks]
init = "poetry install"
test = "pytest tests"
lint = "ruff check awslambdaric/ tests/"
format = "ruff format awslambdaric/ tests/"
clean = { shell = "rm -rf build dist *.egg-info" }
build = ["clean", { cmd = "python setup.py sdist bdist_wheel" }]
build-container = { shell = "./scripts/build-container.sh" }
test-rie = { shell = "./scripts/test-rie.sh" }
check-security = "ruff check --select S awslambdaric/"
check-format = "ruff format --check awslambdaric/ tests/"
check-docstr = "ruff check --select D --ignore D105 awslambdaric/"
type-check = "pyrefly check"
test-smoke = { shell = "CODEBUILD_IMAGE_TAG=codebuild-agent tests/integration/codebuild-local/test_one.sh tests/integration/codebuild/buildspec.os.alpine.yml alpine 3.15 3.9" }
test-integ = { shell = "CODEBUILD_IMAGE_TAG=codebuild-agent DISTRO=\"$DISTRO\" tests/integration/codebuild-local/test_all.sh tests/integration/codebuild/." }
setup-codebuild-agent = { shell = "docker build -t codebuild-agent - < tests/integration/codebuild-local/Dockerfile.agent" }

# Composite tasks
dev = ["init", "test"]
pr = ["init", "check-format", "check-security", "dev"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools>=68", "wheel"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C90", # mccabe complexity
    "S",   # flake8-bandit security checks
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.ruff.format]
quote-style = "double"
